--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,15 +22,8 @@
       "name": "Launch Matterbridge with --expose-gc",
       "program": "${workspaceFolder}/dist/cli.js",
       "runtimeExecutable": "node",
-      "runtimeArgs": [
-        "--expose-gc"
-      ],
-      "args": [
-        "-debug",
-        "-ssl",
-        "-frontend",
-        "443"
-      ],
+      "runtimeArgs": ["--expose-gc"],
+      "args": ["-debug", "-ssl", "-frontend", "443"],
       "console": "integratedTerminal"
     },
     {
@@ -39,32 +32,17 @@
       "name": "Launch Matterbridge with --inspect",
       "program": "${workspaceFolder}/dist/cli.js",
       "runtimeExecutable": "node",
-      "runtimeArgs": [
-        "--inspect=0.0.0.0:9229"
-      ],
-      "args": [
-        "-debug",
-        "-ssl",
-        "-frontend",
-        "443"
-      ],
+      "runtimeArgs": ["--inspect=0.0.0.0:9229"],
+      "args": ["-debug", "-ssl", "-frontend", "443"],
       "console": "integratedTerminal"
     },
-        {
+    {
       "type": "node",
       "request": "launch",
       "name": "Launch Matterbridge with -inspect -snapshotinterval 60000",
       "program": "${workspaceFolder}/dist/cli.js",
       "runtimeExecutable": "node",
-      "args": [
-        "-debug",
-        "-inspect",
-        "-snapshotinterval",
-        "60000",
-        "-ssl",
-        "-frontend",
-        "443"
-      ],
+      "args": ["-debug", "-inspect", "-snapshotinterval", "60000", "-ssl", "-frontend", "443"],
       "console": "integratedTerminal"
     }
   ]
