--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,6 +39,16 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Launch Matterbridge with --inspect --expose-gc",
+      "program": "${workspaceFolder}/dist/cli.js",
+      "runtimeExecutable": "node",
+      "runtimeArgs": ["--inspect=0.0.0.0:9229", "--expose-gc"],
+      "args": ["-debug", "-ssl", "-frontend", "443"],
+      "console": "integratedTerminal"
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Launch Matterbridge with -inspect -snapshotinterval 60000",
       "program": "${workspaceFolder}/dist/cli.js",
       "runtimeExecutable": "node",
