--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest && npm run test"
   },
   "dependencies": {
-    "@matter/main": "0.13.0",
+    "@matter/main": "0.14.0-alpha.0-20250528-d6d12ae65",
     "archiver": "7.0.1",
     "express": "5.1.0",
     "glob": "11.0.2",
