--- a/package.json
+++ b/package.json
@@ -141,33 +141,33 @@
     "install:jest": "npm install --save-dev jest ts-jest @types/jest eslint-plugin-jest && npm run test"
   },
   "dependencies": {
-    "@matter/main": "0.14.0-alpha.0-20250528-d6d12ae65",
+    "@matter/main": "0.14.0",
     "archiver": "7.0.1",
     "express": "5.1.0",
     "glob": "11.0.2",
-    "multer": "2.0.0",
+    "multer": "2.0.1",
     "node-ansi-logger": "3.0.1",
     "node-persist-manager": "1.0.8",
     "ws": "8.18.2"
   },
   "devDependencies": {
-    "@eslint/js": "9.27.0",
+    "@eslint/js": "9.28.0",
     "@types/archiver": "6.0.3",
     "@types/express": "5.0.2",
     "@types/jest": "29.5.14",
     "@types/multer": "1.4.12",
-    "@types/node": "22.15.24",
+    "@types/node": "22.15.29",
     "@types/ws": "8.18.1",
     "eslint-config-prettier": "10.1.5",
-    "eslint-plugin-jest": "28.11.1",
-    "eslint-plugin-n": "17.18.0",
-    "eslint-plugin-prettier": "5.4.0",
+    "eslint-plugin-jest": "28.12.0",
+    "eslint-plugin-n": "17.19.0",
+    "eslint-plugin-prettier": "5.4.1",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "jest": "29.7.0",
     "prettier": "3.5.3",
     "ts-jest": "29.3.4",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.33.0"
+    "typescript-eslint": "8.33.1"
   }
 }
