--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "matterbridge": "dist/cli.js"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0 || >=20.0.0 <21.0.0 || >=22.0.0"
+    "node": ">=18.0.0 <19.0.0 || >=20.0.0 <21.0.0 || >=22.0.0 <23.0.0 || >=24.0.0 <25.0.0"
   },
   "exports": {
     ".": {
