--- a/package.json
+++ b/package.json
@@ -142,13 +142,13 @@
     "updateMatter:latest": "npm install @matter/main@latest && npm install && npm run deepCleanBuild",
     "updateMatter:dev": "npm install @matter/main@dev && npm install && npm run deepCleanBuild",
     "updateMatter:loc": "npm install ../matter.js/packages/matter.js && npm install && npm run deepCleanBuild",
-    "install:dependencies": "npm install @matter/main archiver express glob multer node-ansi-logger node-persist-manager ws",
-    "install:scripts": "npm install --save-dev npm-check-updates rimraf shx",
-    "install:typescript": "npm install --save-dev typescript @types/node @types/express @types/ws",
-    "install:eslint": "npm install --save-dev @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
-    "install:jest": "npm install --save-dev jest ts-jest @types/jest @jest/globals eslint-plugin-jest",
-    "install:vitest": "npm install --save-dev vitest @vitest/coverage-v8 @vitest/eslint-plugin",
-    "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier"
+    "install:dependencies": "npm install --save-exact @matter/main archiver express glob multer node-ansi-logger node-persist-manager ws",
+    "install:scripts": "npm install --save-dev --save-exact npm-check-updates rimraf shx",
+    "install:typescript": "npm install --save-dev --save-exact typescript @types/node @types/express @types/ws",
+    "install:eslint": "npm install --save-dev --save-exact @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
+    "install:jest": "npm install --save-dev --save-exact jest@29.7.0 ts-jest @types/jest @jest/globals eslint-plugin-jest",
+    "install:vitest": "npm install --save-dev --save-exact vitest @vitest/coverage-v8 @vitest/eslint-plugin",
+    "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier"
   },
   "dependencies": {
     "@matter/main": "0.14.0",
@@ -156,7 +156,7 @@
     "express": "5.1.0",
     "glob": "11.0.3",
     "multer": "2.0.1",
-    "node-ansi-logger": "3.0.1",
+    "node-ansi-logger": "3.1.1",
     "node-persist-manager": "2.0.0",
     "ws": "8.18.2"
   },
@@ -174,7 +174,7 @@
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
-    "eslint-plugin-jsdoc": "51.1.2",
+    "eslint-plugin-jsdoc": "51.2.1",
     "eslint-plugin-n": "17.20.0",
     "eslint-plugin-prettier": "5.5.0",
     "eslint-plugin-promise": "7.2.1",
@@ -182,7 +182,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "jest": "29.7.0",
     "npm-check-updates": "18.0.1",
-    "prettier": "3.5.3",
+    "prettier": "3.6.0",
     "rimraf": "6.0.1",
     "shx": "0.4.0",
     "ts-jest": "29.4.0",
