--- a/package.json
+++ b/package.json
@@ -124,19 +124,19 @@
     "clean": "npx rimraf tsconfig.tsbuildinfo ./dist",
     "cleanBuild": "npm run clean && npm run build",
     "cleanBuildProduction": "npm run clean && npm run buildProduction",
-    "deepClean": "npx rimraf tsconfig.tsbuildinfo package-lock.json npm-shrinkwrap.json ./dist ./node_modules ./coverage ./test ./matterstorage ./matterstorage.backup",
+    "deepClean": "npx rimraf tsconfig.tsbuildinfo package-lock.json npm-shrinkwrap.json ./dist ./node_modules ./coverage ./test",
     "deepCleanBuild": "npm run deepClean && npm install && npm run build && npm link && npx jest --clearCache",
     "git:status": "git status && git branch -vv && git diff dev origin/dev",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
     "git:hardreset:dev": "git fetch origin && git checkout dev && git reset --hard origin/dev",
     "git:hardreset:edge": "git fetch origin && git checkout edge && git reset --hard origin/edge",
     "runMeBeforePublish": "npm run lint && npm run format && npm run build && npm run test",
-    "prepublishOnly": "npm pkg delete devDependencies scripts && npm install --omit=dev && npm shrinkwrap",
-    "prepublishOnlyProduction": "npm run cleanBuildProduction && npm pkg delete devDependencies scripts types && npx rimraf ./node_modules && npm install --omit=dev && npm shrinkwrap",
-    "npmPack": "copy package.json package.log && npm run prepublishOnlyProduction && npm pack && copy package.log package.json && npm run deepCleanBuild",
-    "npmPublishTagDev": "copy package.json package.log && npm run prepublishOnlyProduction && npm publish --tag dev && copy package.log package.json && npm run deepCleanBuild",
-    "npmPublishTagEdge": "copy package.json package.log && npm run prepublishOnlyProduction && npm publish --tag edge && copy package.log package.json && npm run deepCleanBuild",
-    "npmPublishTagLatest": "copy package.json package.log && npm run prepublishOnlyProduction && npm publish --tag latest && copy package.log package.json && npm run deepCleanBuild",
+    "prepublishOnly": "npm pkg delete devDependencies scripts && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
+    "prepublishOnlyProduction": "npm run cleanBuildProduction && npm pkg delete devDependencies scripts types && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
+    "npmPack": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm pack && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run deepCleanBuild",
+    "npmPublishTagDev": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag dev && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run deepCleanBuild",
+    "npmPublishTagEdge": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag edge && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run deepCleanBuild",
+    "npmPublishTagLatest": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag latest && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run deepCleanBuild",
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u && npm run deepCleanBuild",
     "updateMatter:latest": "npm install @matter/main@latest && npm install && npm run deepCleanBuild",
