--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
   "scripts": {
     "build": "tsc",
     "buildProduction": "tsc --project tsconfig.production.json",
+    "cleanBuild": "npm shx rm -rf tsconfig.tsbuildinfo dist && npm run build",
+    "cleanBuildProduction": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run buildProduction",
     "watch": "tsc --watch",
     "start": "node ./dist/cli.js",
     "start:inspect": "node --inspect=0.0.0.0:9229 ./dist/cli.js -debug",
@@ -121,11 +123,7 @@
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "clean": "npx rimraf tsconfig.tsbuildinfo ./dist",
-    "cleanBuild": "npm run clean && npm run build",
-    "cleanBuildProduction": "npm run clean && npm run buildProduction",
-    "deepClean": "npx rimraf tsconfig.tsbuildinfo package-lock.json npm-shrinkwrap.json ./dist ./node_modules ./coverage ./test",
-    "deepCleanBuild": "npm run deepClean && npm install && npm run build && npm link && npx jest --clearCache",
+    "reset": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?* && npm install && npm run build && npm link && npx jest --clearCache",
     "git:status": "git status && git branch -vv && git diff dev origin/dev",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
     "git:hardreset:dev": "git fetch origin && git checkout dev && git reset --hard origin/dev",
@@ -133,15 +131,15 @@
     "runMeBeforePublish": "npm run lint && npm run format && npm run build && npm run test",
     "prepublishOnly": "npm pkg delete devDependencies scripts && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
     "prepublishOnlyProduction": "npm run cleanBuildProduction && npm pkg delete devDependencies scripts types && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
-    "npmPack": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm pack && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run deepCleanBuild",
-    "npmPublishTagDev": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag dev && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run deepCleanBuild",
-    "npmPublishTagEdge": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag edge && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run deepCleanBuild",
-    "npmPublishTagLatest": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag latest && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run deepCleanBuild",
+    "npmPack": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm pack && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run reset",
+    "npmPublishTagDev": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag dev && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run reset",
+    "npmPublishTagEdge": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag edge && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run reset",
+    "npmPublishTagLatest": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag latest && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run reset",
     "checkDependencies": "npx npm-check-updates",
-    "updateDependencies": "npx npm-check-updates -u && npm run deepCleanBuild",
-    "updateMatter:latest": "npm install @matter/main@latest && npm install && npm run deepCleanBuild",
-    "updateMatter:dev": "npm install @matter/main@dev && npm install && npm run deepCleanBuild",
-    "updateMatter:loc": "npm install ../matter.js/packages/matter.js && npm install && npm run deepCleanBuild",
+    "updateDependencies": "npx npm-check-updates -u && npm run reset",
+    "updateMatter:latest": "npm install @matter/main@latest && npm install && npm run reset",
+    "updateMatter:dev": "npm install @matter/main@dev && npm install && npm run reset",
+    "updateMatter:loc": "npm install ../matter.js/packages/matter.js && npm install && npm run reset",
     "install:dependencies": "npm install --save-exact @matter/main archiver express glob multer node-ansi-logger node-persist-manager ws",
     "install:scripts": "npm install --save-dev --save-exact npm-check-updates rimraf shx",
     "install:typescript": "npm install --save-dev --save-exact typescript @types/node @types/express @types/ws",
