Refactor npm scripts for improved cleanup and reset processes

--- a/package.json
+++ b/package.json
@@ -123,7 +123,8 @@
     "lint:fix": "eslint --fix --max-warnings=0 .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "reset": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?* && npm install && npm run build && npm link && npx jest --clearCache",
+    "clean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?*",
+    "reset": "npm run clean && npm install && npm run build && npm link && npx jest --clearCache",
     "git:status": "git status && git branch -vv && git diff dev origin/dev",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
     "git:hardreset:dev": "git fetch origin && git checkout dev && git reset --hard origin/dev",
