--- a/src/mock/pluginmatterdevice/package.json
+++ b/src/mock/pluginmatterdevice/package.json
@@ -1,1 +1,8 @@
-{"name":"matterdevicetest","type":"module","main":"index.js","version":"1.0.0","description":"To update","author":"To update"}
+{
+  "name": "matterdevicetest",
+  "type": "module",
+  "main": "index.js",
+  "version": "1.0.0",
+  "description": "To update",
+  "author": "To update"
+}
