--- a/src/mock/pluginserverdevice/package.json
+++ b/src/mock/pluginserverdevice/package.json
@@ -1,1 +1,8 @@
-{"name":"serverdevicetest","type":"module","main":"index.js","version":"1.0.0","description":"To update","author":"To update"}
+{
+  "name": "serverdevicetest",
+  "type": "module",
+  "main": "index.js",
+  "version": "1.0.0",
+  "description": "To update",
+  "author": "To update"
+}
