--- a/package.json
+++ b/package.json
@@ -108,9 +108,6 @@
     "start:inspect": "node --inspect=0.0.0.0:9229 ./dist/cli.js -debug",
     "start:bridge": "node ./dist/cli.js -bridge",
     "start:childbridge": "node ./dist/cli.js -childbridge",
-    "start:controller": "node ./dist/cli.js -controller",
-    "start:edge": "node ./dist/cli.js -edge -debug -logger debug -matterlogger debug",
-    "start:help": "node ./dist/cli.js -help",
     "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --maxWorkers=100%",
     "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --maxWorkers=100%",
     "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --maxWorkers=100%",
@@ -125,7 +122,7 @@
     "format:check": "prettier --check .",
     "clean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?*",
     "reset": "npm run clean && npm install && npm run build && npm link && npx jest --clearCache",
-    "git:status": "git status && git branch -vv && git diff dev origin/dev",
+    "git:status": "git status && git branch -vv && git diff dev origin/dev && git stash list",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
     "git:hardreset:dev": "git fetch origin && git checkout dev && git reset --hard origin/dev",
     "git:hardreset:edge": "git fetch origin && git checkout edge && git reset --hard origin/edge",
