--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx",
     "install:typescript": "npm install --save-dev --save-exact typescript @types/node @types/express @types/ws",
     "install:eslint": "npm install --save-dev --save-exact @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
-    "install:jest": "npm install --save-dev --save-exact jest@29.7.0 ts-jest @types/jest @jest/globals eslint-plugin-jest",
+    "install:jest": "npm install --save-dev --save-exact jest@29.7.0 ts-jest @types/jest @jest/globals@29.7.0 eslint-plugin-jest",
     "install:vitest": "npm install --save-dev --save-exact vitest @vitest/coverage-v8 @vitest/eslint-plugin",
     "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier"
   },
@@ -158,7 +158,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.29.0",
-    "@jest/globals": "30.0.3",
+    "@jest/globals": "29.7.0",
     "@types/archiver": "6.0.3",
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
@@ -166,7 +166,7 @@
     "@types/node": "24.0.4",
     "@types/ws": "8.18.1",
     "@vitest/coverage-v8": "3.2.4",
-    "@vitest/eslint-plugin": "1.2.7",
+    "@vitest/eslint-plugin": "1.3.3",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
@@ -178,7 +178,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "jest": "29.7.0",
     "npm-check-updates": "18.0.1",
-    "prettier": "3.6.1",
+    "prettier": "3.6.2",
     "rimraf": "6.0.1",
     "shx": "0.4.0",
     "ts-jest": "29.4.0",
