Add LaundryDryer class and Jest test.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -139,6 +139,7 @@
         "--maxWorkers=100%",
         "src/base.test.ts",
         "src/laundryWasher.test.ts",
+        "src/laundryDryer.test.ts",
         "src/roboticVacuumCleaner.test.ts",
         "src/evse.test.ts",
         "src/waterHeater.test.ts",
