Add HeatPump class and Jest test.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -145,6 +145,7 @@
         "src/waterHeater.test.ts",
         "src/solarPower.test.ts",
         "src/batteryStorage.test.ts",
+        "src/heatPump.test.ts"
       ],
       "group": {
         "kind": "test",
